--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5,4 +5,6 @@
 
 .page-header {
   background-image: url('https://www.vynn.co/wp-content/uploads/2018/09/featured_banner.png');
+  background-position: center;
+  background-size: cover;
 }
