--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,7 +4,7 @@
 @import "{{ site.theme }}";
 
 .page-header {
-  background-image: url('https://www.vynn.co/wp-content/uploads/2018/09/featured_banner.png');
+  background-image: url('/assets/images/header.png');
   background-position: center;
   background-size: cover;
 }
