--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,6 +4,7 @@
 @import "{{ site.theme }}";
 
 .page-header {
+  background-color: #2196F3;
   background-image: url('/assets/images/header.png');
   background-position: center;
   background-size: cover;
