--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -14,7 +14,8 @@
   opacity: 1;
 }
 
-@media screen and (min-width: 64em)
-.page-header {
-    padding: 4rem 6rem;
+@media screen and (min-width: 64em) {
+  .page-header {
+      padding: 4rem 6rem;
+  }
 }
