--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,6 +26,9 @@
       {% if site.github.is_project_page %}
         <a href="{{ site.repository_url }}" class="btn">View on GitHub</a>
       {% endif %}
+      <a href="/alpha-testing" class="btn">Alpha testing</a>
+      <a href="/docs" class="btn">Documentation</a>
+      <a href="/gallery" class="btn">Gallery</a>
       {% if site.show_downloads %}
         <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
         <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
