--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,10 +1,11 @@
 ---
 ---
+$primary-color: #2196F3;
 
 @import "{{ site.theme }}";
 
 .page-header {
-  background-color: #2196F3;
+  background-color: $primary-color;
   background-image: url('/assets/images/header.png');
   background-position: center;
   background-size: cover;
@@ -21,6 +22,10 @@
 
 .project-tagline {
   opacity: 1;
+}
+
+.main-content h1, .main-content h2, .main-content h3, .main-content h4, .main-content h5, .main-content h6 {
+  color: $primary-color;
 }
 
 @media screen and (min-width: 64em) {
