--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,8 +1,13 @@
 ---
 ---
 $primary-color: #2196F3;
+$secondary-color: #f3b600;
 
 @import "{{ site.theme }}";
+
+a {
+  color: $secondary-color;
+}
 
 .page-header {
   background-color: $primary-color;
