--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,9 +39,7 @@
       {{ content }}
 
       <footer class="site-footer">
-        {% if site.github.is_project_page %}
-          <span class="site-footer-owner"><a href="{{ site.repository_url }}">{{ site.repository_name }}</a> is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a>.</span>
-        {% endif %}
+        <a href="http://vynn.co">Blog</a>
       </footer>
     </main>
   </body>
