--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,7 +39,7 @@
       {{ content }}
 
       <footer class="site-footer">
-        <a href="http://vynn.co">Blog</a>
+        <a href="http://homemade.systems">Blog</a>
       </footer>
     </main>
   </body>
