--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,7 +39,7 @@
       {{ content }}
 
       <footer class="site-footer">
-       
+        <a href="/privacy_policy">PRIVACY POLICY</a><a href="/terms_and_conditions">TERMS AND CONDITIONS</a>
       </footer>
     </main>
   </body>
