--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -59,6 +59,17 @@
       <footer class="site-footer">
         <a href="/privacy_policy">PRIVACY POLICY</a><a href="/terms_and_conditions">TERMS AND CONDITIONS</a>
       </footer>
+      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Before comments -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-6530242109614004"
+     data-ad-slot="9056502874"
+     data-ad-format="link"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
     </main>
   </body>
 </html>
