--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -11,6 +11,9 @@ a, a:link, a:visited, a:hover, a:active {
 
 #adv {
   text-align: center;
+  max-width: 64rem;
+  margin: 0 auto;
+  max-height: 15rem;
 }
 
 .page-header {
