--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,13 @@
     {% endif %}
     <meta charset="UTF-8">
 {% seo %}
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({
+          google_ad_client: "ca-pub-6530242109614004",
+          enable_page_level_ads: true
+     });
+</script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#2196F3">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
