--- a/_layouts/auth_callback.html
+++ b/_layouts/auth_callback.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="{{ site.lang | default: "en-US" }}">
   <head>
-    <link rel='redirect_uri' href='hass://auth'>
+    <link rel='redirect_uri' href='https://haclient.page.link/ha_auth'>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#2196F3">
