--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,8 +29,7 @@
         <a href="{{ site.repository_url }}" class="btn">View on GitHub</a>
       {% endif %}
       <a href="/beta-testing" class="btn">Beta testing</a>
-      <a href="/docs" class="btn">Documentation</a>
-      <a href="/gallery" class="btn">Gallery</a>
+      <a href="/help" class="btn">Help pages</a>
       {% if site.show_downloads %}
         <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
         <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
